auto_branch_pushes/sg/google-analytics-4/ppluto-main/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: ppluto-main # the same group belongs to the same ALB (https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.2/guide/ingress/annotations/#group.name)
    alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=true # this protects ALB deletetion
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443" # http 80 port redirects to https 443
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:912892869657:certificate/294944b0-380a-4329-9a14-9d276a34701e # it needs a certificate in ACM for https
spec:
  rules:
    - host: web.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service
                port:
                  number: 82
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service
                port:
                  number: 80
